<resources>
    <string name="app_name">WeatherMusicApp</string>
    <string name="string_pleasewait">Please Wait ...</string>
    <string name="moodBTN">Choose Your Mood</string>
    <string name="contentDescription">Image</string>
    <string name="action_settings">Settings</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="relaxed">Relaxed</string>
    <string name="confused">Confused</string>
    <string name="excited">Excited</string>
    <string name="play">Play Music</string>
    <string name="staticLocation">Set Location</string>
    <string name="dynamicLocation">Find Location</string>
    <string name="action_favorite"></string>
    <string name="zip">Enter Zip</string>
    <string name="counrty">Enter Country Code (US, UK)</string>
    <string name="set_map_string">Set Location</string>

</resources>
