<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play_audio_example"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.steve.weathermusicapp.MainActivity"
    android:background="@drawable/thunderstorm">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/contentDescription" />

    <TextView
        android:id="@+id/txtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/angry"
        android:textStyle="bold"
        android:textSize="46sp"
        android:gravity="center"
        android:textColor="@color/secondary_text"/>

    <TextView
        android:id="@+id/txtCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_pleasewait"
        android:textStyle="bold"
        android:textSize="66sp"
        android:gravity="center"
        android:textColor="@color/secondary_text"/>

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_pleasewait"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/secondary_text"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:contentDescription="@string/contentDescription"
        />


    <TextView
        android:id="@+id/txtTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_pleasewait"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/secondary_text"/>

    <TextView
        android:id="@+id/txtCelsius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_pleasewait"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/secondary_text"/>

</LinearLayout>
